--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <h2>PLEASE I NEED YOUR VOTE</h2>
 
     <div class="image-container">
-      <img src="bla.jpg" alt="Robyn Bacon" />
+      <img src="IMG-20250714-WA0048.jpg" alt="Robyn Bacon" />
     </div>
 
     <h3>Robyn Bacon</h3>
