--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
     .image-container img {
       width: 100%;
+      height: 30%;
       border-radius: 6px;
     }
 
@@ -121,7 +122,7 @@
       <img src="IMG-20250714-WA0048.jpg" alt="Robyn Bacon" />
     </div>
 
-    <h3>Robyn Bacon</h3>
+    <h3>Hayley jones</h3>
 
     <div class="votes-box">
       <p>Total Votes: <strong>5678</strong> out of <strong>5688</strong></p>
