--- a/index.html
+++ b/index.html
@@ -26,17 +26,16 @@
       color: #333;
     }
 
-    .image-container {
-      margin: 16px 0;
-       height: 20%;
-    }
+   .image-container {
+  margin: 16px 0;
+}
 
-    .image-container img {
-      width: 100%;
-     
-      border-radius: 6px;
-    }
-
+.image-container img {
+  width: 100%;
+  max-height: 200px; /* Set a fixed height or adjust as needed */
+  object-fit: cover;
+  border-radius: 6px;
+}
     h3 {
       text-align: center;
       margin: 8px 0;
