--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 .image-container img {
   width: 100%;
-  max-height: 200px; /* Set a fixed height or adjust as needed */
-  object-fit: cover;
+  max-height: 200px; /* Adjust this as needed */
+  object-fit: contain;
   border-radius: 6px;
 }
     h3 {
